# asr2Summary

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  API_README.md  DEPLOYMENT.md  Dockerfile  README.md  README_EN.md  app.py  app_db.py  asr2text.py  auth.py  compression_utils.py  config.py  database.py  database_schema.sql  deploy.py  docker-compose.yml  eslint.config.js  llm_manager.py  meetassistant.db-shm  meetassistant.db-wal  meetassistant.py  migrate_to_database.py  nginx.conf  package-lock.json  package.json  production_config.py  production_start.py  pyproject.toml  requirements.txt  start_server.py  templates_config.json
.github/workflows/: lint.yml  release.yml
electron/: main.js
logs/: usage_stats.json
static/: manifest.json  sw.js
static/css/: base.css  tokens.css
static/css/pages/: dashboard.css  upload.css
static/js/: dashboard.js  icons.js  markdown.js  theme.js  toast.js  upload.js
summaries/: meeting_summary_20250820_102146.md  transcription_20250820_102118.txt
templates/: dashboard.html  index.html  summaries.html  unified_dashboard.html
